update user-setting page and all forms

--- a/src/app/auth/login/login-resetpassword/login-newpassword/login-newpassword.component.html
+++ b/src/app/auth/login/login-resetpassword/login-newpassword/login-newpassword.component.html
@@ -11,7 +11,7 @@
                 <div *ngIf="errors.length > 0" class="alert alert-danger">
                   <p *ngFor="let error of errors">{{error.detail}}</p>
                 </div>
-                <form class="register-form" #newpasswordForm="ngForm">
+                <form class="register-form" #newpasswordForm="ngForm" (ngSubmit)="setNewPassword()">
                   <label>Email</label>
                   <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
                     <div class="input-group-prepend">
@@ -46,7 +46,7 @@
                               placeholder="Confirm Password" (focus)="focus2=true" (blur)="focus2=false"
                               required>
                   </div>
-                  <button [disabled]="!newpasswordForm.valid" type="submit" class="btn btn-danger btn-block btn-round" (click)="setNewPassword(verifyToken)">Set new Password</button>
+                  <button [disabled]="!newpasswordForm.valid" type="submit" class="btn btn-danger btn-block btn-round">Set new Password</button>
                 </form>
               </div>
             </div>
