--- a/src/app/auth/register/register-verification/register-verification.component.html
+++ b/src/app/auth/register/register-verification/register-verification.component.html
@@ -1,24 +1,14 @@
 <section id="register-verification">
-    <!-- 
-        <div class="bwm-form">
-          <div class="row">
-            <div class="col-md-5">
-              <div *ngIf="notifyMessage" class="alert alert-success">
-                {{notifyMessage}}
-              </div>
 
-
-
-              <div *ngIf="errors.length > 0" class="alert alert-danger">
-                <p *ngFor="let error of errors">
-                  {{error.detail}}
-                </p>
-              </div>
-            </div>
-
+    <div class="page-header" data-parallax="true" style="background-image: url('./assets/img/daniel-olahh.jpg');">
+      <div class="filter"></div>
+      <div class="container">
+          <div class="motto text-center">
+              <h1>Activattion Success!</h1>
+              <h3>Congratuations! You can login from now.</h3>  
           </div>
-        </div>
-    -->
+      </div>
+  </div>
 
 </section>
       
