--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -66,7 +66,7 @@
                     <div ngbDropdown class="nav-item clickable dropdown">
                         <div class="nav-link dropdown-toggle" ngbDropdownToggle><i class="nc-icon nc-single-02"></i>&nbsp; {{auth.getUsername()}}さん</div>
                         <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right dropdown-danger">
-                            <a class="dropdown-item" [routerLink]="['/user/mybookings']" fragment="headers"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; My bookings</a>
+                            <a class="dropdown-item" [routerLink]="['/user/mybookings']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; My bookings</a>
                             <a class="dropdown-item" [routerLink]="['/user/settings']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; Settings</a>
                         </div>
                     </div>
