--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -309,11 +309,8 @@
                     <div class="col-md-8 ml-auto mr-auto text-center">
                         <h2 class="title">Let's book</h2>
                         <p class="description">Cause if you do, it can be yours for Free. Hit the button below and download it. Start a new project or give an old Bootstrap 4 project a new look.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 download-area ml-auto mr-auto">
-                        <a routerLink="booking" class="btn btn-danger btn-lg">Go to booking</a>
+                        <br>
+                        <a routerLink="booking" class="btn btn-danger btn-round btn-lg">Go to booking</a>
                     </div>
                 </div>
             </div>
