--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -3,7 +3,7 @@
     <div class="filter"></div>
     <div class="container">
         <div class="space-top"></div>
-        <div class="anytime-pt-logo-rentaldetails">
+        <div class="logo-rentaldetails">
             <img src="assets/img/anytime-pt-logo2.png" alt="">
         </div>
         <div class="motto text-center">
