--- a/src/app/auth/register/register-sent/register-sent.component.html
+++ b/src/app/auth/register/register-sent/register-sent.component.html
@@ -2,8 +2,8 @@
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
-            <h1>Password reset Email has been sent.</h1>
-            <h3>Check your mail-box and reset your password.</h3>
+            <h1>Congratuations !</h1>
+            <h3>An activation email has been sent.</h3>
         </div>
     </div>
 </div>
