--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -155,7 +155,25 @@
                             <div *ngIf="errors.length > 0" class="alert alert-danger">
                                 <p *ngFor="let error of errors">{{error.detail}}</p>
                             </div>
-                            <form class="register-form" #registarForm="ngForm">
+                            <form class="register-form" #registarForm="ngForm" (ngSubmit)="register()">
+                            <!-- <label>Username</label> -->
+                            <div class="form-group">
+                                    <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">
+                                                <i class="nc-icon nc-single-02"></i>
+                                            </span>
+                                        </div>
+                                        <input [(ngModel)]="formData.username"
+                                                name="username"
+                                                type="username"
+                                                class="form-control"
+                                                id="username"
+                                                placeholder="Username" (focus)="focus=true" (blur)="focus=false"
+                                                required>
+                                        </div>
+                                </div>
+                                
                                 <!-- <label>Email</label> -->
                                 <div class="form-group">
                                     <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
@@ -169,7 +187,7 @@
                                                 type="email"
                                                 class="form-control"
                                                 id="email"
-                                                placeholder="Email" (focus)="focus=true" (blur)="focus=false"
+                                                placeholder="Email" (focus)="focus1=true" (blur)="focus1=false"
                                                 required>
                                         </div>
                                 </div>
@@ -181,7 +199,7 @@
                                             type="password"
                                             class="form-control"
                                             id="password"
-                                            placeholder="Password" (focus)="focus1=true" (blur)="focus1=false"
+                                            placeholder="Password" (focus)="focus2=true" (blur)="focus2=false"
                                             required>
                                 </div>
                                 <div class="form-group">
@@ -190,10 +208,10 @@
                                             type="password"
                                             class="form-control"
                                             id="passwordConfirmation"
-                                            placeholder="Confirm Password" (focus)="focus2=true" (blur)="focus2=false"
+                                            placeholder="Confirm Password" (focus)="focus3=true" (blur)="focus3=false"
                                             required>
                                 </div>
-                                <button [disabled]="!registarForm.valid" type="submit" class="btn btn-danger btn-block btn-round"  (click)="register()">Request to become Member</button>
+                                <button [disabled]="!registarForm.valid" type="submit" class="btn btn-danger btn-block btn-round">Request to become Member</button>
                             </form>
                             <div class="forgot">
                                 <a routerLink="/login" class="btn btn-link btn-danger">Already have an account?</a>
