--- a/src/app/rental/rental-list/rental-list.component.scss
+++ b/src/app/rental/rental-list/rental-list.component.scss
@@ -1,9 +1,9 @@
-.anytime-pt-logo-rentaldetails{
+.logo-rentaldetails{
   z-index: 3;
   position: relative;
-  max-width: 500px;
-  margin: -40px auto -50px;
-  padding: 50px;
+  max-width: 400px;
+  margin: -10px auto -20px;
+  padding: 20px;
 
   img{
       width: 100%;
