--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -4,72 +4,71 @@
     </div>
     <div class="profile-content section">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="profile-picture">
-                    <app-image-upload [image]="'./assets/img//placeholder.jpg'"></app-image-upload>
+                    <app-image-upload [image]="'./assets/img//default-avatar.png'"></app-image-upload>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-md-6 ml-auto mr-auto">
-                    <form class="settings-form">
-                        <div class="row">
-                            <div class="col-md-6 col-sm-6">
-                                <div class="form-group">
-                                    <label>First Name</label>
-                                    <input type="text" class="form-control border-input" placeholder="First Name">
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 col-sm-6">
-                                <div class="form-group">
-                                    <label>Last Email</label>
-                                    <input type="text" class="form-control border-input" placeholder="Last Name">
-                                </div>
-                            </div>
+                    <form class="settings-form" *ngIf="userData" #userForm="ngForm" (ngSubmit)="updateUser(userForm)">
+                        <div class="form-group">
+                            <label>Your Name</label>
+                            <input type="text" class="form-control border-input" placeholder="Your Name" [ngModel]="userData.username" name="username" required>
                         </div>
-                      <div class="form-group">
-                            <label>Job Title</label>
-                            <input type="text" class="form-control border-input" placeholder="Job Title">
-                      </div>
-                      <div class="form-group">
-                        <label>Description</label>
-                            <textarea class="form-control textarea-limited" placeholder="This is a textarea limited to 150 characters." rows="3" maxlength="150" ></textarea>
-                            <h5><small><span id="textarea-limited-message" class="pull-right">150 characters left</span></small></h5>
-                      </div>
+                        <div class="form-group">
+                            <label>Email Address</label>
+                            <input type="text" class="form-control border-input" placeholder="Email Address" [ngModel]="userData.email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Change Password</label>
+                            <input type="text" class="form-control border-input" placeholder="Current Password">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control border-input" placeholder="New Password">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control border-input" placeholder="Confirm New Password">
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label>
+                                <textarea class="form-control textarea-limited" placeholder="Your trainer can see your description here. Let's introduse who you are." rows="3" maxlength="150" ></textarea>
+                                <h5><small><span id="textarea-limited-message" class="pull-right">150 characters left</span></small></h5>
+                        </div>
 
-                    <label>Notifications</label>
-                    <ul class="notifications">
-                          <li class="notification-item">
-                            Updates regarding platform changes
-                            <bSwitch
-                                [switch-on-color]="'info'"
-                                [switch-off-color]="'info'"
-                                [(ngModel)]="state_info"
-                                name="first_switch">
-                            </bSwitch>
-                          </li>
-                          <li class="notification-item">
-                            Updates regarding product changes
-                            <bSwitch
-                                [switch-on-color]="'info'"
-                                [switch-off-color]="'info'"
-                                [(ngModel)]="state_info1"
-                                name="second_switch">
-                            </bSwitch>
-                          </li>
-                          <li class="notification-item">
-                            Weekly newsletter
-                            <bSwitch
-                                [switch-on-color]="'info'"
-                                [switch-off-color]="'info'"
-                                [(ngModel)]="state_info2"
-                                name="third_switch">
-                            </bSwitch>
-                          </li>
-                      </ul>
-                      <div class="text-center">
-                        <button type="submit" class="btn btn-wd btn-info btn-round">Save</button>
-                      </div>
+                        <label>Notifications</label>
+                        <ul class="notifications">
+                            <!-- <li class="notification-item">
+                                Updates regarding platform changes
+                                <bSwitch
+                                    [switch-on-color]="'info'"
+                                    [switch-off-color]="'info'"
+                                    [(ngModel)]="state_info"
+                                    name="first_switch">
+                                </bSwitch>
+                            </li>
+                            <li class="notification-item">
+                                Updates regarding product changes
+                                <bSwitch
+                                    [switch-on-color]="'info'"
+                                    [switch-off-color]="'info'"
+                                    [(ngModel)]="state_info1"
+                                    name="second_switch">
+                                </bSwitch>
+                            </li> -->
+                            <li class="notification-item">
+                                From our special Newsletters & Coupons
+                                <bSwitch
+                                    [switch-on-color]="'info'"
+                                    [switch-off-color]="'info'"
+                                    [(ngModel)]="state_info2"
+                                    name="third_switch">
+                                </bSwitch>
+                            </li>
+                        </ul>
+                        <div class="text-center">
+                            <button [disabled]="userForm.pristine" type="submit" class="btn btn-wd btn-info btn-round">Update</button>
+                        </div>
                     </form>
 
                 </div>
