--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -121,13 +121,13 @@
                                 </li>
                                 |
                                 <li>
-                                    <a href="#paper-kit">
+                                    <a routerLink="/terms">
                                         Terms
                                     </a>
                                 </li>
                                 |
                                 <li>
-                                    <a href="#paper-kit">
+                                    <a routerLink="/privacy">
                                         Privacy
                                     </a>
                                 </li>
