--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -14,9 +14,9 @@
                     <form class="settings-form" *ngIf="userData" #userForm="ngForm" (ngSubmit)="updateUser(userForm)">
                         <div class="form-group">
                             <label>Your Name</label>
-                            <input type="text" class="form-control border-input" placeholder="Your Name" [ngModel]="userData.username" name="username" required>
+                            <input type="text" class="form-control border-input" placeholder="Your Name" [(ngModel)]="userData.username" name="username" required>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label>Email Address</label>
                             <input type="text" class="form-control border-input" placeholder="Email Address" [ngModel]="userData.email" name="email" required>
                         </div>
@@ -34,7 +34,7 @@
                             <label>Description</label>
                                 <textarea class="form-control textarea-limited" placeholder="Your trainer can see your description here. Let's introduse who you are." rows="3" maxlength="150" ></textarea>
                                 <h5><small><span id="textarea-limited-message" class="pull-right">150 characters left</span></small></h5>
-                        </div>
+                        </div> -->
 
                         <label>Notifications</label>
                         <ul class="notifications">
@@ -61,7 +61,7 @@
                                 <bSwitch
                                     [switch-on-color]="'info'"
                                     [switch-off-color]="'info'"
-                                    [(ngModel)]="state_info2"
+                                    [(ngModel)]="third_switch"
                                     name="third_switch">
                                 </bSwitch>
                             </li>
