--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,15 +9,19 @@
                 <div class="card card-register">
                   <h3 class="title">Login with</h3>
                   <div class="social-line text-center">
-                    <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
+                    <button class="btn btn-neutral btn-facebook btn-just-icon" (click)="FBLogin()">
                       <i class="fa fa-facebook-square"></i>
-                    </a>
+                    </button>
                     <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
                       <i class="fa fa-google-plus"></i>
                     </a>
                     <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
                       <i class="fa fa-twitter"></i>
                     </a> -->
+                  </div>
+                  <br>
+                  <div *ngIf="isFBbuttonClicked && errors.length > 0" class="alert alert-danger">
+                    <p *ngFor="let error of errors">{{error.detail}}</p>
                   </div>
     
                   <div class="division">
@@ -26,7 +30,7 @@
                       <div class="line r"></div>
                   </div>
     
-                  <div *ngIf="errors.length > 0" class="alert alert-danger">
+                  <div *ngIf="!isFBbuttonClicked && errors.length > 0" class="alert alert-danger">
                     <p *ngFor="let error of errors">{{error.detail}}</p>
                   </div>
                   <form class="register-form" [formGroup]="loginForm" (ngSubmit)="login()">
