--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -36,23 +36,21 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-12 mr-auto">
                             <div class="card card-register">
-                                <h3 class="title">Register</h3>
-                                <div class="social-line text-center">
-                                    <a href="#pablo" class="btn btn-neutral btn-facebook btn-just-icon">
-                                        <i class="fa fa-facebook-square"></i>
-                                    </a>
-                                    <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-                                    <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
-                                        <i class="fa fa-twitter"></i>
-                                    </a> -->
-                                </div>
-                                <div class="division">
-                                    <div class="line l"></div>
-                                    <span>or</span>
-                                    <div class="line r"></div>
-                                </div>
+                                <h3 *ngIf="isFBbuttonClicked" class="title">Register with Facebook</h3>
+                                <ng-container *ngIf="!isFBbuttonClicked">
+                                    <h3 class="title">Register</h3>
+                                    <div class="social-line text-center">
+                                        <button  class="btn btn-neutral btn-facebook btn-just-icon" (click)="FBregister()">
+                                            <i class="fa fa-facebook-square"></i>
+                                        </button>
+                                    </div>
+                                    <div class="division">
+                                        <div class="line l"></div>
+                                        <span>or</span>
+                                        <div class="line r"></div>
+                                    </div>
+                                </ng-container>
+
                                 <div *ngIf="errors.length > 0" class="alert alert-danger">
                                     <p *ngFor="let error of errors">{{error.detail}}</p>
                                 </div>
@@ -74,24 +72,23 @@
                                                     required>
                                             </div>
                                     </div>
-
                                     <!-- <label>Email</label> -->
                                     <div class="form-group">
-                                            <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text">
-                                                        <i class="nc-icon nc-email-85"></i>
-                                                    </span>
-                                                </div>
-                                                <input [(ngModel)]="formData.email"
-                                                        name="email"
-                                                        type="email"
-                                                        class="form-control"
-                                                        id="email"
-                                                        placeholder="Email" (focus)="focus1=true" (blur)="focus1=false"
-                                                        required>
-                                                </div>
-                                        </div>
+                                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text">
+                                                    <i class="nc-icon nc-email-85"></i>
+                                                </span>
+                                            </div>
+                                            <input [(ngModel)]="formData.email"
+                                                    name="email"
+                                                    type="email"
+                                                    class="form-control"
+                                                    id="email"
+                                                    placeholder="Email" (focus)="focus1=true" (blur)="focus1=false"
+                                                    required>
+                                            </div>
+                                    </div>
 
                                     <!-- <label>Password</label> -->
                                     <div class="form-group">
