Update stripe form

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -31,17 +31,17 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a href="#paper-kit" >
+                                        <a href="#" >
                                             Home
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                             Discover
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                             Blog
                                         </a>
                                     </li>
@@ -52,7 +52,7 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                            Contact Us
                                         </a>
                                     </li>
@@ -62,7 +62,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                            About Us
                                         </a>
                                     </li>
@@ -73,17 +73,17 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                             Portfolio
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                            How it works
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#paper-kit">
+                                        <a href="#">
                                            Testimonials
                                         </a>
                                     </li>
@@ -115,7 +115,7 @@
                         <div class="links pull-right">
                             <ul>
                                 <li>
-                                    <a href="#paper-kit">
+                                    <a href="#">
                                         Company Policy
                                     </a>
                                 </li>
