--- a/src/app/auth/register/register-sent/register-sent.component.html
+++ b/src/app/auth/register/register-sent/register-sent.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="motto text-center">
             <h1>Congratuations !</h1>
-            <h3>An activation email has been sent.</h3>
+            <h3>アクティベーションメールが送信されました！</h3>
         </div>
     </div>
 </div>
