--- a/src/app/common/components/payment/payment.component.html
+++ b/src/app/common/components/payment/payment.component.html
@@ -21,5 +21,5 @@
       Card accepted successfully.
     </div>
   </div>
-  <button [disabled]="!isCardValid() || token" type='button' (click)="onSubmit()">カードを登録/変更</button>
+  <button [disabled]="!isCardValid() || token" (click)="onSubmit()">カードを登録/変更</button>
 </form>
