--- a/src/app/common/components/payment/payment.component.scss
+++ b/src/app/common/components/payment/payment.component.scss
@@ -1,13 +1,9 @@
-form {
-    margin: 20px 0;
-  }
 
 form.loading {
     opacity: 0.5;
   }
   
   .group {
-    background: white;
     box-shadow: 0 7px 14px 0 rgba(49, 49, 93, 0.10), 0 3px 6px 0 rgba(0, 0, 0, 0.08);
     border-radius: 4px;
   }
@@ -28,9 +24,9 @@ form.loading {
   }
   
   label > span {
-    width: 120px;
+    width: 30%;
     text-align: right;
-    margin-right: 30px;
+    margin-right: 5%;
   }
   
   .field {
@@ -40,8 +36,6 @@ form.loading {
     color: #31325F;
     outline: none;
     flex: 1;
-    padding-right: 10px;
-    padding-left: 10px;
     cursor: text;
   }
   
@@ -60,11 +54,8 @@ form.loading {
     box-shadow: 0 7px 14px 0 rgba(49, 49, 93, 0.10), 0 3px 6px 0 rgba(0, 0, 0, 0.08);
     border-radius: 4px;
     border: 0;
-    margin-top: 20px;
     font-size: 15px;
     font-weight: 400;
-    width: 50%;
-    height: 40px;
     line-height: 38px;
     outline: none;
   }
