--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -18,7 +18,7 @@
                 <h2 class="title">Let's talk product</h2>
                 <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
                 <br>
-                <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a>
+                <a href="#" class="btn btn-danger btn-round">See Details</a>
             </div>
         </div>
         <br/><br/>
@@ -86,7 +86,7 @@
                         <a href="#avatar"><img src="./assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
-                        <a href="#paper-kit">
+                        <a href="#">
                             <div class="author">
                                 <h4 class="card-title">Henry Ford</h4>
                                 <h6 class="card-category">Product Manager</h6>
@@ -110,7 +110,7 @@
                         <a href="#avatar"><img src="./assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
-                        <a href="#paper-kit">
+                        <a href="#">
                             <div class="author">
                                 <h4 class="card-title">Sophie West</h4>
                                 <h6 class="card-category">Designer</h6>
@@ -134,7 +134,7 @@
                         <a href="#avatar"><img src="./assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
-                        <a href="#paper-kit">
+                        <a href="#">
                             <div class="author">
                                 <h4 class="card-title">Robert Orben</h4>
                                 <h6 class="card-category">Developer</h6>
