--- a/src/app/rental/rental-booking/rental-booking.component.html
+++ b/src/app/rental/rental-booking/rental-booking.component.html
@@ -1,118 +1,96 @@
 <section id="rentalDetailBooking" *ngIf="rental">
+<div class="main">
+    <div class="pricing-1 section">
+        <div class="container">
+            <mat-vertical-stepper [linear]="isLinear" #stepper>
+                <mat-step label="Select course">
+                    <div class="space-top"></div>
+                    <div class="row">
+                        <div class="col-md-6 col-xs-6">
+                            <button class="card" data-background="color" data-color="green" (click)="onCourseSelected(1)">
+                                <div class="card-body text-center">
+                                    <h2 class="card-title">60min</h2>
+                                    <p class="card-description">60minのパーソナルトレーニングが受けられるチケットです.</p>
+                                    <div class="card-footer">
+                                        <div class="btn btn-neutral btn-round">{{rental.hourlyPrice}}JPY</div>
+                                    </div>
+                                </div>
+                            </button>
+                        </div>
 
-<div class="pricing-1 section">
-    <div class="container">
-        <mat-vertical-stepper [linear]="isLinear" #stepper>
-            <mat-step label="Select course">
-                <div class="space-top"></div>
-                <div class="row">
-                    <div class="col-md-6 col-xs-6">
-                        <button class="card" data-background="color" data-color="green" (click)="onCourseSelected(1)">
-                            <div class="card-body text-center">
-                                <div class="card-icon">
-                                    <i class="nc-icon nc-money-coins"></i>
+                        <div class="col-md-6 col-xs-6">
+                            <button class="card" data-background="color" data-color="blue" (click)="onCourseSelected(2)">
+                                <div class="card-body text-center">
+                                    <h2 class="card-title">90min</h2>
+                                    <p class="card-description">90minのパーソナルトレーニングが受けられるチケットです.</p>
+                                    <div class="card-footer">
+                                        <div class="btn btn-neutral btn-round">{{rental.hourlyPrice * 1.5}}JPY</div>
+                                    </div>
                                 </div>
-                                <h4 class="card-title">60min Ticket</h4>
-                                <p class="card-description">60minのレッスンが受けられるチケットです.</p>
-                                <div class="card-footer">
-                                    <div class="btn btn-neutral btn-round">{{rental.hourlyPrice}}JPY</div>
-                                </div>
-                            </div>
-                        </button>
-                    </div>
-
-                    <div class="col-md-6 col-xs-6">
-                        <button class="card" data-background="color" data-color="blue" (click)="onCourseSelected(2)">
-                            <div class="card-body text-center">
-                                <div class="card-icon">
-                                    <i class="nc-icon nc-watch-time"></i>
-                                </div>
-                                <h4 class="card-title">90min Ticket</h4>
-                                <p class="card-description">90minのレッスンが受けられるチケットです.</p>
-                                <div class="card-footer">
-                                    <div class="btn btn-neutral btn-round">{{rental.hourlyPrice * 1.5}}JPY</div>
-                                </div>
-                            </div>
-                        </button>
-                    </div>
-                </div>
-            </mat-step>
-            <mat-step label="Pick the best Date and Time" [completed]="isSelectedDateTime">
-                <div class="space-top"></div>
-                <div class="row">
-                    <div class="col-md-7 ml-auto mr-auto">
-                        <app-booking-selecter [rental]="rental" 
-                                              [chosenCourseTime]="chosenCourseTime" 
-                                              (newBookingInfo)="onBookingReady($event)" 
-                                              (chosenDateTime)="isSelectedDateTime=$event"
-                                              >
-                        </app-booking-selecter>
-                    </div>
-                </div>
-                <div class="space-top"></div>
-            </mat-step>
-            <mat-step label="Check total price">
-                <div class="space-top"></div>
-
-                <div class="row">
-                    <div class="col-md-8 mr-auto ml-auto">
-                        <h2 class="title">Total Price</h2>
-                        <div class="description" *ngIf="!isSelectedDateTime">
-                            コース日時を選択してください！
-                        </div>    
-                        <div class="description" *ngIf="isSelectedDateTime">
-                            Trainer Name：{{rental.rentalname}}<br>
-                            Date Time：{{ newBooking.startAt | date: "yyyy-MM/dd-HH:mm" }} 〜 {{ newBooking.endAt | date: "HH:mm" }}<br>
-                            Course：{{rental.hourlyPrice}}JPY × {{chosenCourseTime / 60}}Hour = {{rental.hourlyPrice * chosenCourseTime / 60}}JPY<br>
-                            Service chage(30%)；{{rental.hourlyPrice * chosenCourseTime / 60 * 0.3}}JPY<br>
-                            Total Price；{{rental.hourlyPrice * chosenCourseTime / 60 * 1.3}}JPY<br>
-                        </div>    
-                        <!-- <div class="description" *ngIf="isSelectedDateTime && (customer && customer.id.length>0) && !isChangeBtnClicked"> -->
-                        <div class="description" *ngIf="isSelectedDateTime && customer.id && !isChangeBtnClicked">
-                            Paying Metiod：Visa ******4242
-                            <button class="btn btn-primary" (click)="isChangeBtnClicked=true">Change paying method?</button>
+                            </button>
                         </div>
                     </div>
-                </div>
-                <div class="space-top"></div>
-                <!-- <div *ngIf="isSelectedDateTime && ((customer.id.length==0) || isChangeBtnClicked)"> -->
-                <div *ngIf="isSelectedDateTime && (!customer.id || isChangeBtnClicked)">
-                    <div class="nav-tabs-navigation">
-                        <div class="nav-tabs-wrapper">
-                            <ngb-tabset [justify]="'center'">
-                                <!-- <ngb-tab title="PayPal">
-                                    <ng-template ngbTabContent >
-                                        <h3 class="text-muted">Total price</h3>
-                                        <div class="space-top"></div>
-                                    </ng-template>
-                                </ngb-tab> -->
-                                <ngb-tab title="CreditCard">
-                                    <ng-template ngbTabContent>
-                                        <div class="space-top"></div>
-                                        <app-payment (paymentComfirmed)="onPaymentConfirmed($event)"></app-payment>
-                                    </ng-template>
-                                </ngb-tab>
-                            </ngb-tabset>
+                </mat-step>
+                <mat-step label="Pick the best Date and Time" [completed]="isSelectedDateTime">
+                    <div class="space-top"></div>
+                    <div class="row">
+                        <div class="col-md-7 ml-auto mr-auto">
+                            <app-booking-selecter [rental]="rental" 
+                                                [chosenCourseTime]="chosenCourseTime" 
+                                                (newBookingInfo)="onBookingReady($event)" 
+                                                (chosenDateTime)="isSelectedDateTime=$event"
+                                                >
+                            </app-booking-selecter>
                         </div>
                     </div>
-                </div>
-                <div class="space-top"></div>
-                <div class="row">
-                    <div class="col-md-8 mr-auto ml-auto">
-                        <!-- <button *ngIf="!(isSelectedDateTime && (customer.id || paymentToken)) || isChangeBtnClicked" [disabled]="true" class="btn btn-round">Book Now!</button>
-                        <button *ngIf="isSelectedDateTime && (customer.id || paymentToken) && !isChangeBtnClicked" class="btn btn-warning btn-round" (click)="createBooking()">Book Now!</button> -->
-                        <button *ngIf="!(isSelectedDateTime && (customer.id || paymentToken)) || isChangeBtnClicked" [disabled]="true" class="btn btn-round">Book Now!</button>
-                        <button *ngIf="isSelectedDateTime && (customer.id || paymentToken) && !isChangeBtnClicked" class="btn btn-warning btn-round" (click)="createBooking()">Book Now!</button>
+                    <div class="space-top"></div>
+                </mat-step>
+                <mat-step label="Check total price">
+                    <div class="space-top"></div>
+
+                    <div class="row">
+                        <div class="col-md-8 mr-auto ml-auto">
+                            <h2 class="title">Total Price</h2>
+                            <div class="description" *ngIf="!isSelectedDateTime">
+                                コース日時を選択してください！
+                            </div>    
+                            <div class="description" *ngIf="isSelectedDateTime">
+                                Trainer Name：{{rental.rentalname}}<br>
+                                Date Time：{{ newBooking.startAt | date: "yyyy-MM/dd-HH:mm" }} 〜 {{ newBooking.endAt | date: "HH:mm" }}<br>
+                                Course：{{rental.hourlyPrice}}JPY × {{chosenCourseTime / 60}}Hour = {{rental.hourlyPrice * chosenCourseTime / 60}}JPY<br>
+                                <!-- Service chage(30%)；{{rental.hourlyPrice * chosenCourseTime / 60 * 0.3}}JPY<br>
+                                Total Price；{{rental.hourlyPrice * chosenCourseTime / 60 * 1.3}}JPY<br> -->
+                                Total Price；{{rental.hourlyPrice * chosenCourseTime / 60 }}JPY<br>
+                            </div>    
+                            <!-- <div class="description" *ngIf="isSelectedDateTime && (customer && customer.id.length>0) && !isChangeBtnClicked"> -->
+                            <div class="description" *ngIf="isSelectedDateTime && customer.id && !isChangeBtnClicked">
+                                Paying Metiod：Visa ******4242
+                                <button class="btn btn-info btn-sm" (click)="isChangeBtnClicked=true">Change paying method?</button>
+                            </div>
+                            <div class="space-top"></div>
+                            <!-- <div *ngIf="isSelectedDateTime && ((customer.id.length==0) || isChangeBtnClicked)"> -->
+
+                            <div *ngIf="isSelectedDateTime && (!customer.id || isChangeBtnClicked)">
+                                <app-payment (paymentComfirmed)="onPaymentConfirmed($event)"></app-payment>
+                            </div>
+                            <div class="space-top"></div>
+                            <div class="text-center">
+                                <!-- <button *ngIf="!(isSelectedDateTime && (customer.id || paymentToken)) || isChangeBtnClicked" [disabled]="true" class="btn btn-round">Book Now!</button>
+                                <button *ngIf="isSelectedDateTime && (customer.id || paymentToken) && !isChangeBtnClicked" class="btn btn-warning btn-round" (click)="createBooking()">Book Now!</button> -->
+                                <button *ngIf="!(isSelectedDateTime && (customer.id || paymentToken)) || isChangeBtnClicked" [disabled]="true" class="btn btn-round btn-lg">Book Now!</button>
+                                <button *ngIf="isSelectedDateTime && (customer.id || paymentToken) && !isChangeBtnClicked" class="btn btn-warning btn-round btn-lg" (click)="createBooking()">Book Now!</button>
+                            </div>
+                        </div>
                     </div>
-                </div>                 
-            </mat-step>
-        
-            <!-- Override Icon -->
-            <ng-template matStepperIcon="edit">
-                <mat-icon>check</mat-icon>
-            </ng-template>
-        </mat-vertical-stepper>
-     </div>
+              
+                </mat-step>
+            
+                <!-- Override Icon -->
+                <ng-template matStepperIcon="edit">
+                    <mat-icon>check</mat-icon>
+                </ng-template>
+            </mat-vertical-stepper>
+        </div>
+    </div>
 </div>
-
 </section>
