--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -165,7 +165,7 @@
                                 <a href="#avatar"><img src="./assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
                             </div>
                             <div class="card-block">
-                                <a href="#paper-kit">
+                                <a href="#">
                                     <div class="author">
                                         <h4 class="card-title">Henry Ford</h4>
                                         <h6 class="card-category">Product Manager</h6>
@@ -189,7 +189,7 @@
                                 <a href="#avatar"><img src="./assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
                             </div>
                             <div class="card-block">
-                                <a href="#paper-kit">
+                                <a href="#">
                                     <div class="author">
                                         <h4 class="card-title">Sophie West</h4>
                                         <h6 class="card-category">Designer</h6>
@@ -213,7 +213,7 @@
                                 <a href="#avatar"><img src="./assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>
                             </div>
                             <div class="card-block">
-                                <a href="#paper-kit">
+                                <a href="#">
                                     <div class="author">
                                         <h4 class="card-title">Robert Orben</h4>
                                         <h6 class="card-category">Developer</h6>
