--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <ng-container *ngIf="!auth.isAuthenticated()">
-                    <li class="nav-item" *ngIf="!isDocumentation()">
+                    <!-- <li class="nav-item" *ngIf="!isDocumentation()">
                         <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
                             <i class="fa fa-twitter"></i>
                             <p class="d-lg-none">Twitter</p>
@@ -33,7 +33,7 @@
                             <i class="fa fa-instagram"></i>
                             <p class="d-lg-none">Instagram</p>
                         </a>
-                    </li>
+                    </li> -->
         
                     <li class="nav-item" *ngIf="!isDocumentation()">
                         <a [routerLink]="['/register']" class="nav-link"><i class="nc-icon nc-book-bookmark"></i> 会員登録する</a>
@@ -56,9 +56,9 @@
                             <div class="nav-link dropdown-toggle" ngbDropdownToggle><i class="nc-icon nc-single-02"></i>&nbsp; オーナー機能</div>
                             <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right dropdown-danger">
                                 <a class="dropdown-item" [routerLink]="['/rentals/requests']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 予約リクエスト管理</a>
-                                <!-- <a class="dropdown-item" [routerLink]="['/rentals/manage']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 商品管理</a>
-                                <a class="dropdown-item" [routerLink]="['/manage/report-owner']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 収益レポート</a>
-                                <a class="dropdown-item" [routerLink]="['/rentals/new']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 物件の追加</a> -->
+                                <a class="dropdown-item" [routerLink]="['/rentals/manage']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 商品管理</a>
+                                <!-- <a class="dropdown-item" [routerLink]="['/manage/report-owner']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 収益レポート</a> -->
+                                <!-- <a class="dropdown-item" [routerLink]="['/rentals/new']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 物件の追加</a> -->
                             </div>
                         </div>
                     </ng-container>
